refactoriza los filtros para hacerlos mas legibles